--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "bugs": {
     "url": "https://github.com/cobiwave/simplefolio/issues"
   },
-  "homepage": "https://github.com/cobiwave/simplefolio#readme",
+  "homepage": "https://fmsarp.github.com/portfolio-website1",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.2",
+    "gh-pages": "^6.1.0",
     "parcel": "^2.8.2",
     "prettier": "^2.8.1"
   },
